--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": ""
   },
   "dependencies": {
+    "jsonfile": "^4.0.0",
     "open": "0.0.5",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
