--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "jsonfile": "^4.0.0",
+    "lodash": "^4.17.4",
     "open": "0.0.5",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
