--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": ""
   },
   "dependencies": {
+    "dynamo-request": "^0.1.1",
     "jsonfile": "^4.0.0",
     "lodash": "^4.17.4",
     "open": "0.0.5",
