--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "devDependencies": {
         "babel-core": "^6.25.0",
+        "babel-eslint": "^8.0.3",
         "babel-loader": "^7.1.1",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.0",
@@ -50,6 +51,15 @@
         "electron-devtools-installer": "^2.2.0",
         "electron-packager": "^8.5.0",
         "electron-rebuild": "^1.1.3",
+        "eslint": "^4.12.1",
+        "eslint-config-standard": "^10.2.1",
+        "eslint-friendly-formatter": "^3.0.0",
+        "eslint-loader": "^1.9.0",
+        "eslint-plugin-html": "^4.0.1",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-node": "^5.2.1",
+        "eslint-plugin-promise": "^3.6.0",
+        "eslint-plugin-standard": "^3.0.1",
         "extract-text-webpack-plugin": "^3.0.0",
         "file-loader": "^0.11.2",
         "html-webpack-plugin": "^2.30.1",
