--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
         "build:win32": "cross-env BUILD_TARGET=win32 node .electron-vue/build.js",
         "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
         "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
-        "dev": "node .electron-vue/dev-runner.js",
+        "dev": "cross-env GH_TOKEN=6ed027d27b0fb213e236d2a8f2c50422ef8f074a node .electron-vue/dev-runner.js",
         "pack": "npm run pack:main && npm run pack:renderer",
         "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
         "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
-        "postinstall": ""
+        "postinstall": "",
+        "publish": "build --mac --win -p always"
+    },
+    "build": {
+        "publish": [{
+            "provider": "github",
+            "owner": "mdsbarbieri",
+            "repo": "dynareq-ui"
+        }]
     },
     "dependencies": {
         "dynamo-request": "^0.1.2",
@@ -51,6 +59,7 @@
         "electron-devtools-installer": "^2.2.0",
         "electron-packager": "^8.5.0",
         "electron-rebuild": "^1.1.3",
+        "electron-updater": "^2.16.3",
         "eslint": "^4.12.1",
         "eslint-config-standard": "^10.2.1",
         "eslint-friendly-formatter": "^3.0.0",
