--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
     "name": "dynareq-ui",
-    "productName": "dynareq-ui",
-    "version": "0.0.0",
-    "author": "Matheus Barbieri <mdsbarbieri@gmail.com>",
+    "version": "0.0.1",
+    "author": "Matheus Barbieri <matheus.barbieri@compasso.com.br>",
     "description": "Execute requests to all production servers",
     "license": "MIT",
     "main": "./dist/electron/main.js",
     "scripts": {
-        "build": "node .electron-vue/build.js",
-        "build:darwin": "cross-env BUILD_TARGET=darwin node .electron-vue/build.js",
-        "build:linux": "cross-env BUILD_TARGET=linux node .electron-vue/build.js",
-        "build:mas": "cross-env BUILD_TARGET=mas node .electron-vue/build.js",
-        "build:win32": "cross-env BUILD_TARGET=win32 node .electron-vue/build.js",
+        "build": "node .electron-vue/build.js && electron-builder",
+        "build:dir": "node .electron-vue/build.js && electron-builder --dir",
         "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
         "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
         "dev": "node .electron-vue/dev-runner.js",
@@ -19,6 +15,39 @@
         "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
         "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
         "postinstall": ""
+    },
+    "build": {
+        "productName": "dynareq-ui",
+        "appId": "org.matheusbarbieri.dynareq-ui",
+        "directories": {
+            "output": "build"
+        },
+        "files": [
+            "dist/electron/**/*"
+        ],
+        "dmg": {
+            "contents": [{
+                    "x": 410,
+                    "y": 150,
+                    "type": "link",
+                    "path": "/Applications"
+                },
+                {
+                    "x": 130,
+                    "y": 150,
+                    "type": "file"
+                }
+            ]
+        },
+        "mac": {
+            "icon": "src/renderer/assets/image/icon.icns"
+        },
+        "win": {
+            "icon": "src/renderer/assets/image/icon.ico"
+        },
+        "linux": {
+            "icon": "src/renderer/assets/image/icon"
+        }
     },
     "dependencies": {
         "dynamo-request": "^0.1.2",
@@ -32,7 +61,6 @@
     },
     "devDependencies": {
         "babel-core": "^6.25.0",
-        "babel-eslint": "^8.0.3",
         "babel-loader": "^7.1.1",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.0",
@@ -49,17 +77,7 @@
         "electron": "^1.7.5",
         "electron-debug": "^1.4.0",
         "electron-devtools-installer": "^2.2.0",
-        "electron-packager": "^8.5.0",
-        "electron-rebuild": "^1.1.3",
-        "eslint": "^4.12.1",
-        "eslint-config-standard": "^10.2.1",
-        "eslint-friendly-formatter": "^3.0.0",
-        "eslint-loader": "^1.9.0",
-        "eslint-plugin-html": "^4.0.1",
-        "eslint-plugin-import": "^2.8.0",
-        "eslint-plugin-node": "^5.2.1",
-        "eslint-plugin-promise": "^3.6.0",
-        "eslint-plugin-standard": "^3.0.1",
+        "electron-builder": "^19.19.1",
         "extract-text-webpack-plugin": "^3.0.0",
         "file-loader": "^0.11.2",
         "html-webpack-plugin": "^2.30.1",
